fixed css styling issues on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -117,17 +117,29 @@ header {
 
         h1 {
             font-size: 1.6rem;
-            margin: 0 0 0.5rem;
+            margin: 0;
         }
     }
 }
 
-// Site title container
-.site-title-container {
+// Header components
+.title-nav {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    width: auto;
+}
+
+.mobile-header {
+    display: flex;
     align-items: center;
+    justify-content: space-between;
     width: 100%;
+}
+
+#brunny-eth-image {
+    margin-left: 15px;
+    width: 60px;
+    height: auto;
 }
 
 // Menu toggle for mobile
@@ -143,6 +155,7 @@ header {
     flex-direction: column;
     justify-content: space-between;
     z-index: 10;
+    margin-left: 15px;
 }
 
 .menu-toggle .bar {
@@ -461,16 +474,7 @@ footer {
     }
     
     .header-content {
-        flex-direction: row;
-        align-items: center;
         padding: 0.5rem 1rem;
-    }
-    
-    .title-nav {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        flex: 1;
     }
     
     nav {
@@ -483,13 +487,6 @@ footer {
         a {
             font-size: 1rem;
         }
-    }
-    
-    #brunny-eth-image {
-        max-width: 50px;
-        margin-left: auto;
-        position: relative;
-        z-index: 5;
     }
     
     .cooking-gallery {
@@ -556,15 +553,18 @@ footer {
     
     .menu-toggle {
         display: flex;
-        margin-left: 0.5rem;
     }
     
-    .title-nav {
+    .header-content {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    .mobile-header {
         display: flex;
-        flex-direction: row;
+        width: 100%;
         justify-content: space-between;
         align-items: center;
-        width: 100%;
     }
     
     nav {
@@ -581,8 +581,7 @@ footer {
         ul {
             flex-direction: column;
             gap: 1rem;
-            margin-top: 1rem;
-            justify-content: space-between;
+            margin-top: 0.5rem;
             width: 100%;
         }
     }
